use correct variable for max height of navbar menu on mobile

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -260,7 +260,7 @@ body {
   .navbar-menu.is-active {
     display: block;
     box-shadow: 0 8px 16px rgba(10, 10, 10, 0.1);
-    max-height: calc(var(--viewport-height) - var(--navbar-height));
+    max-height: var(--body-min-height);
     overflow-y: auto;
   }
 
